# Stockfish

./: CMakeLists.txt  README.md  sve.cc  test.cc
cmake/: DownloadNet.cmake  EnableFeatures.cmake  EnableFlags.cmake
scripts/: net.sh
src/: Makefile  benchmark.cpp  default.profraw  engine.cpp  engine.h  evaluate.cpp  evaluate.h  history.h  main.cpp  memory.cpp  memory.h  misc.cpp  misc.h  movepick.cpp  movepick.h  position.cpp  position.h  search.cpp  search.h  thread.cpp  thread.h  timeman.cpp  timeman.h  tt.cpp  tt.h  tune.cpp  tune.h  types.h  uci.cpp
src/arch/armv9-sve/: arch.h
src/arch/armv9-sve/nnue/: nnue_common.h  nnue_feature_transformer.h  nnue_misc.h  simd.h
src/arch/armv9-sve/nnue/layers/: clipped_relu.h
src/arch/common/nnue/: network.cpp  network.h  nnue_common.h  nnue_feature_transformer.h  nnue_misc.cpp  nnue_misc.h
src/arch/common/nnue/features/: half_ka_v2_hm.cpp  half_ka_v2_hm.h
src/arch/common/nnue/layers/: affine_transform_sparse_input.h
src/arch/generic/nnue/: nnue_feature_transformer.h
src/arch/generic/nnue/layers/: sqr_clipped_relu.h
src/arch/i386/: Makefile  arch.h
src/arch/i386/nnue/: nnue_feature_transformer.h
src/arch/i386/nnue/layers/: affine_transform.h  clipped_relu.h  sqr_clipped_relu.h
src/nnue/: evaluate_nnue.cpp  network.cpp  network.h  nnue_accumulator.cpp  nnue_accumulator.h  nnue_architecture.h  nnue_common.h  nnue_feature_transformer.h  nnue_feature_transformer_orig.h  nnue_misc.cpp  nnue_misc.h
src/nnue/layers/: affine_transform.h  affine_transform_sparse_input.h  clipped_relu.h  simd.h  sqr_clipped_relu.h
src/syzygy/: tbprobe.cpp
